--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
           us.
         </h1>
         <p>
-          A Team of experienced blogism professionals will provide you with the
-          best advice and tips for your desire place.
+          A Team of experienced blogism professionals will provide you with the best advice and tips for your desire place.
         </p>
         <a href="#abouts" class="btn">Discover Now</a>
       </div>
@@ -54,8 +53,6 @@
         <img src="img/Image111.png" alt="Community Hero" />
       </div>
     </section>
-
-
 
     <section class="searchBar">
       <div class="searchBarMenu">
@@ -113,9 +110,6 @@
         </div>
       </div>
     </section>
-
-
-
 
     <section id="tour" class="tours">
       <h2>Exclusive <span class="spanTag">deals & discounts</span></h2>
@@ -206,13 +200,10 @@
         </div>
       </div>
       <div class="slideBtn">
-          <div><img src="img/Arrow 3.png" alt=""></div>
-          <div><img src="img/Arrow 3 (1).png" alt=""></div>
+        <div><img src="img/Arrow 3.png" alt="" /></div>
+        <div><img src="img/Arrow 3 (1).png" alt="" /></div>
       </div>
     </section>
-
-
-
 
     <section id="blog" class="blog">
       <h2>Best <span class="spanTag">vacation plan</span></h2>
@@ -222,8 +213,8 @@
       </p>
       <img src="img/Element (2).png" alt="" class="blogelementImg" />
       <div class="blogslideBtn">
-          <div><img src="img/Arrow 3.png" alt=""></div>
-          <div><img src="img/Arrow 3 (1).png" alt=""></div>
+        <div><img src="img/Arrow 3.png" alt="" /></div>
+        <div><img src="img/Arrow 3 (1).png" alt="" /></div>
       </div>
       <div class="blog-grid">
         <div class="blog-item">
@@ -287,48 +278,171 @@
     </section>
 
 
-<section>
-  <div>
-    
-  </div>
-</section>
+    <section class="testimonial-section">
+      <div class="container">
+        <!-- Left Content -->
+        <div class="text-content">
+          <h2>
+            What people say <br />
+            <span>about us.</span>
+          </h2>
+          <p>
+            Our clients send us bunch of smiles with our services and we love
+            them.
+          </p>
 
-
-
-
-    <footer id="contact">
-      <div class="footer-content">
-        <div class="footer-column">
-          <h3>Company</h3>
-          <p>About Us</p>
-          <p>Careers</p>
-          <p>Press</p>
+          <div class="arrows">
+            <span class="arrow">&#8592;</span>
+            <span class="arrow active">&#8594;</span>
+          </div>
         </div>
-        <div class="footer-column">
-          <h3>Quick Links</h3>
-          <p>Home</p>
-          <p>About</p>
-          <p>Destination</p>
-          <p>Tour</p>
-          <p>Blog</p>
-        </div>
-        <div class="footer-column">
-          <h3>Contact Info</h3>
-          <p>Phone: +1 234 567 890</p>
-          <p>Email: info@trabook.com</p>
-          <p>Address: 123 Main St, City, Country</p>
-        </div>
-        <div class="footer-column">
-          <h3>Follow Us</h3>
-          <div class="social-links">
-            <a href="#"><img src="img/Facebook Icon.png" alt="Facebook" /></a>
-            <a href="#"><img src="img/Vector (1).png" alt="Twitter" /></a>
-            <a href="#"><img src="img/Vector (2).png" alt="Instagram" /></a>
+
+        <!-- Right Card -->
+        <div class="card-wrapper">
+          <img src="./img/Element (333).png" alt="" class="elementImage">
+          <div class="testimonial-card">
+            <img src="./img/Image (6).png" alt="user" />
+
+            <p class="message">
+              “On the Windows talking painted pasture yet its express parties
+              use. Sure last upon he same as knew next. Of believed or diverted
+              no.”
+            </p>
+
+            <h4>Mike taylor</h4>
+            <span>Lahore, Pakistan</span>
+          </div>
+
+          <div class="testimonial-card shadow-card">
+            <br>
+            <br>
+            <br>
+            <h4>Chris Thomas</h4>
+            <span>CEO of Red Button</span>
           </div>
         </div>
       </div>
+    </section>
+
+    <section class="blog-section">
+      <h2>Get update with <span>latest blog</span></h2>
+
+      <div class="blog-container">
+        <div class="blog-card">
+          <img
+            src="https://images.unsplash.com/photo-1501183638710-841dd1904471"
+            alt=""
+          />
+          <h4>The Amazing Difference a Year of Travelling.</h4>
+          <p>July 27, 2021</p>
+        </div>
+
+        <div class="blog-card">
+          <img
+            src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee"
+            alt=""
+          />
+          <h4>Travel far enough, you meet yourself.</h4>
+          <p>July 27, 2021</p>
+        </div>
+
+        <div class="blog-card">
+          <img
+            src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d"
+            alt=""
+          />
+          <h4>How to Save Money While Visiting Africa.</h4>
+          <p>July 27, 2021</p>
+        </div>
+
+        <div class="blog-card">
+          <img
+            src="https://images.unsplash.com/photo-1500534623283-312aade485b7"
+            alt=""
+          />
+          <h4>Reflections on 5 Months of Travel: Time to Hang</h4>
+          <p>July 27, 2021</p>
+        </div>
+      </div>
+
+      <div class="dots">
+        <span class="dot"></span>
+        <span class="dot active"></span>
+        <span class="dot"></span>
+      </div>
+    </section>
+
+    <!-- Subscribe Section -->
+    <section class="subscribe-section">
+      <div class="subscribe-box">
+        <img src="./img/Vector Tree.png" alt="" class="trees1" />
+        <img src="./img/Vector Tree.png" alt="" class="trees2" />
+        <img src="./img/Ellipse 23.png" alt="" class="ellipseImg1" />
+        <img src="./img/Ellipse 23.png" alt="" class="ellipseImg2" />
+        <img src="./img/Ellipse 23.png" alt="" class="ellipseImg3" />
+        <img src="./img/Ellipse 23.png" alt="" class="ellipseImg4" />
+        <img src="./img/Ellipse 23.png" alt="" class="ellipseImg5" />
+        <h2>
+          Subscribe and get exclusive <br />
+          deals & offer
+        </h2>
+
+        <form class="subscribe-form">
+          <input type="email" placeholder="Enter your mail" />
+          <button>Subscribe</button>
+        </form>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-col">
+          <h3>Trabook <img src="./img/Vector (1).png" width="15px"></h3>
+          <p>
+            Book your trip in minute, get full<br />
+            control for much longer.
+          </p>
+
+          <div class="social-icons">
+            <span>f</span>
+            <span style="background-color: orange; color: #fff">in</span>
+            <span>t</span>
+          </div>
+        </div>
+
+        <div class="footer-col">
+          <h4>Company</h4>
+          <ul>
+            <li>About</li>
+            <li>Careers</li>
+            <li>Logistic</li>
+            <li>Privacy & Policy</li>
+          </ul>
+        </div>
+
+        <div class="footer-col">
+          <h4>Contact</h4>
+          <ul>
+            <li>Help/FAQ</li>
+            <li>Press</li>
+            <li>Affilates</li>
+          </ul>
+        </div>
+
+        <div class="footer-col">
+          <h4>More</h4>
+          <ul>
+            <li>Press Centre</li>
+            <li>Our Blog</li>
+            <li>Low fare tips</li>
+          </ul>
+        </div>
+      </div>
+
       <div class="footer-bottom">
-        <p>&copy; 2023 TraBook. All rights reserved.</p>
+        <p>Copyright, Trabook 2022. All rights reserved.</p>
+        <span>Terms & Conditions</span>
       </div>
     </footer>
 
